landingpage images and first setting finished

--- a/test-frontend/css/mainStyle.css
+++ b/test-frontend/css/mainStyle.css
@@ -1,3 +1,8 @@
+
+#logImg {
+    width: 40%;
+}
+
 body > nav {
     /* background-color: black; */
 }
@@ -8,16 +13,10 @@ body > header {
     background-size: cover;
 }
 
-body > #about, #services, #contact {
+body > #about, #review, #use, #contact {
     padding: 0%;
 }
 
-#applyCall {
-    float: left;
-    margin-left: 10%;
-}
-
-#applyCodi {
-    float: right;
-    margin-right: 10%;
+#contact {
+    text-align: center;
 }
