commit for jh and thanks

--- a/test-frontend/components/codinavBar.html
+++ b/test-frontend/components/codinavBar.html
@@ -9,21 +9,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto" id="navbarMenuItems">
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">ABOUT</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#review">REVIEW</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#use">USE</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#contact">CONTACT US</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="modal" data-target="#modalLoginForm">LOGIN</a>
-        </li>
+        <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
+        <li class="nav-item"><a class="nav-link" href="/mypage">MY PAGE</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">LOG OUT</a></li>
       </ul>
     </div>
   </div>
